@@ -34,12 +34,6 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 /* Statistics about the allocation.  */
 static ggc_statistics *ggc_stats;
 
-/* The FALSE_LABEL_STACK, declared in except.h, has language-dependent
-   semantics.  If a front-end needs to mark the false label stack, it
-   should set this pointer to a non-NULL value.  Otherwise, no marking
-   will be done.  */
-void (*lang_mark_false_label_stack) PARAMS ((struct label_node *));
-
 /* Trees that have been marked, but whose children still need marking.  */
 varray_type ggc_pending_trees;
 
@@ -323,26 +317,12 @@ ggc_mark_rtx_children (r)
 		} 
 	      break;
 	    case 'V': case 'E':
-	      ggc_mark_rtvec (XVEC (r, i));
+	      gt_ggc_m_rtvec_def (XVEC (r, i));
 	      break;
 	    }
 	}
     }
   while ((r = next_rtx) != NULL);
-}
-
-/* V had not been previously marked, but has now been marked via
-   ggc_set_mark.  Now recurse and process the children.  */
-
-void
-ggc_mark_rtvec_children (v)
-     rtvec v;
-{
-  int i;
-
-  i = GET_NUM_ELEM (v);
-  while (--i >= 0)
-    ggc_mark_rtx (RTVEC_ELT (v, i));
 }
 
 /* Recursively set marks on all of the children of the
